@@ -33,7 +33,7 @@ android:installLocation="preferExternal"
                 android:resource="@xml/widget_4x2" />    
 </receiver>
 </application>
-    <uses-sdk android:minSdkVersion="3"/>
+    <uses-sdk android:minSdkVersion="7"/>
 
 
 
