@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/layout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:layout_margin="8dip"
     android:background="@drawable/widget_shape"
     android:orientation="vertical" >
-
+    
     <TextView
         android:id="@+id/widgetText"
         style="@android:style/TextAppearance.Medium"
